Service Regression/.metadata/.plugins/com.provar.eclipse.ui/00DM0000001eO1fMAE/objects/Customer_Hierarchy__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The Relationship&apos;s Parent Account</description>
        <inlineHelpText>The Relationship&apos;s Parent Account</inlineHelpText>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Customer Hierarchy</relationshipLabel>
        <relationshipName>Customer_Hierarchy_Account</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Related_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The Relationship&apos;s Child Account</description>
        <inlineHelpText>The Relationship&apos;s Child Account</inlineHelpText>
        <label>Related Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Customer Hierarchy (Related Account)</relationshipLabel>
        <relationshipName>Customer_Hierarchy_Related_Account</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <description>This field holds the hierarchy type.</description>
        <inlineHelpText>Set this field to the correct value to mark the relation as that type.</inlineHelpText>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>Bill To</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Business</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Primary to Secondary</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Customer Hierarchy</label>
    <nameField>
        <label>Customer Hierarchy Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Customer Hierarchy</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>